deleted some files

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -57,6 +57,7 @@ button, .button {
     background-color: lighten($pink, 5%);
     text-decoration: none;
     color: $dark;
+    border: none;
   }
 }
 
