--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -3,6 +3,9 @@
   .inner {
     text-align: center;
     padding: 0 120px;
+    @media (max-width: $screen-sm-max) {
+      padding: 0;
+    }
   }
   p {
     margin: 30px 0 40px;
