--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -13,6 +13,10 @@
     height: 200px;
     opacity: 0.3;
     transition: all 0.3s ease 0s;
+    @media (max-width: $screen-sm-max) {
+      margin-bottom: 30px;
+    }
+
     &:hover {
       opacity: 1;
     }
