--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 @import "variables";
 
 @import "elements/body";
 @import "elements/section";
 @import "elements/nav";
 @import "elements/a";
+@import "elements/headings";
+
+@import "sections/footer";
