--- a/styles/elements/section.scss
+++ b/styles/elements/section.scss
@@ -1,6 +1,6 @@
 section {
   min-height: 100vh;
-  padding: 70px 30px 120px;
+  padding: 70px 200px 120px 30px;
   max-width: 960px;
 
   display: flex;
