--- a/styles/app.scss
+++ b/styles/app.scss
@@ -6,5 +6,7 @@
 @import "elements/nav";
 @import "elements/a";
 @import "elements/headings";
+@import "elements/footer";
+@import "elements/p";
 
-@import "sections/footer";
+@import "modules/project";
