--- a/styles/elements/headings.scss
+++ b/styles/elements/headings.scss
@@ -2,6 +2,7 @@ h1 {
   font-size: 3em;
   font-family: $font-family-secondary;
   font-weight: 700;
+  margin-bottom: 30px;
 
   &:after {
     content: '.';
