--- a/styles/elements/headings.scss
+++ b/styles/elements/headings.scss
@@ -1,11 +1,29 @@
+h1, h2 {
+  font-family: $font-family-secondary;
+
+}
+
 h1 {
   font-size: 3em;
-  font-family: $font-family-secondary;
-  font-weight: 700;
   margin-bottom: 30px;
+  font-weight: 700;
 
   &:after {
     content: '.';
     color: $pink;
+  }
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 1.5em;
+  margin-bottom: 30px;
+  margin-top: 50px;
+
+  &:before {
+    content: '.';
+    font-weight: 700;
+    color: $pink;
+    margin-right: 10px;
   }
 }
