--- a/styles/modules/project.scss
+++ b/styles/modules/project.scss
@@ -2,9 +2,7 @@
   $gap: 30px;
 
   display: block;
-  flex-basis: calc(50% - #{$gap} * 2);
-  width: calc(50% - #{$gap} * 2);
-  min-width: 200px;
+  width: 200px;
   height: 200px;
   margin: 0 calc(#{$gap} / 2) $gap;
   position: relative;
