--- a/styles/modules/project.scss
+++ b/styles/modules/project.scss
@@ -17,7 +17,7 @@
 
     .project__desc {
       height: 50px;
-      font-size: 0.8em;
+      font-size: 0.8rem;
     }
   }
 
@@ -37,7 +37,7 @@
     left: 0;
 
     height: 100%;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     transition: height 0.2s ease-in-out, font-size 0.2s ease-in-out;
 
     display: flex;
