--- a/styles/modules/project.scss
+++ b/styles/modules/project.scss
@@ -47,7 +47,7 @@
     background: rgba($dark, 50%);
     backdrop-filter: blur(5px);
     font-weight: 700;
-    width: calc(100% - 30px);
+    width: 100%;
   }
 
   &-list {
