--- a/styles/modules/project.scss
+++ b/styles/modules/project.scss
@@ -23,7 +23,7 @@
 
   &__img {
     background-size: cover !important;
-    background-position: 0 50% !important;
+    background-position: 0 0 !important;
 
     width: 100%;
     height: 100%;
