--- a/styles/modules/home.scss
+++ b/styles/modules/home.scss
@@ -7,15 +7,32 @@
   }
 
   .arrow {
-    width: 25px;
-    height: 25px;
-    display: inline-block;
-    border-top: 3px solid $pink;
-    border-right: 3px solid $pink;
-    transform: rotate(45deg);
-    margin-bottom: -3px;
-    animation: arrowBounce 1.5s ease-in-out forwards;
-    animation-iteration-count: infinite;
+    border-bottom: none;
+
+    transition: transform 0.2s ease-in-out;
+
+    span {
+      width: 25px;
+      height: 25px;
+      display: inline-block;
+      border-top: 3px solid $pink;
+      border-right: 3px solid $pink;
+      transform: rotate(45deg);
+      margin-bottom: -3px;
+
+      animation: arrowBounce 1.5s ease-in-out forwards;
+      animation-iteration-count: infinite;
+    }
+
+    &:hover {
+      margin-bottom: 0;
+      margin-left: 10px;
+
+      span {
+        transform: rotate(135deg);
+        animation-name: arrowBounceY;
+      }
+    }
   }
 }
 
@@ -28,6 +45,19 @@
   }
 
   100% {
-    margin-left: 0px;
+    margin-left: 0;
+  }
+}
+
+@keyframes arrowBounceY {
+  0% {
+    margin-bottom: 5px;
+  }
+  50% {
+    margin-bottom: -5px;
+  }
+
+  100% {
+    margin-bottom: 5px;
   }
 }
