--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 @import "variables";
+@import "breakpoints";
 
 @import "elements/body";
 @import "elements/section";
