--- a/styles/elements/body.scss
+++ b/styles/elements/body.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
 
-  background: $dark;
+  background: linear-gradient(135deg, $dark 10%, black);
   color: $white;
 
   font-family: $font-family-base;
