--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,3 +4,18 @@ $pink: #ff99df;
 
 $font-family-base: 'Raleway', sans-serif;
 $font-family-secondary: 'Roboto Mono', sans-serif;
+
+$grid-breakpoints: (
+        xs: 0,
+        sm: 576px,
+        md: 768px,
+        lg: 900px,
+        xl: 1200px
+);
+
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 930px,
+        xl: 1200px
+);
