animation name fix

--- a/styles/modules/home.scss
+++ b/styles/modules/home.scss
@@ -19,7 +19,7 @@
       transform: rotate(45deg);
       margin-bottom: -3px;
 
-      animation: arrowBounce 1.5s ease-in-out forwards;
+      animation: arrowBounceX 1.5s ease-in-out forwards;
       animation-iteration-count: infinite;
     }
 
